@@ -15,10 +15,16 @@
  */
 package com.clougence.clouddm.console.web.service.cicd;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.baomidou.mybatisplus.core.metadata.IPage;
@@ -27,47 +33,37 @@ import com.clougence.clouddm.api.common.exception.ErrorMessageException;
 import com.clougence.clouddm.api.common.rpc.ResWebData;
 import com.clougence.clouddm.api.common.rpc.ResWebDataUtils;
 import com.clougence.clouddm.console.web.component.approval.ApprovalFlowService;
-import com.clougence.clouddm.console.web.component.autoexec.AutoExecService;
+import com.clougence.clouddm.console.web.component.cicd.ChangeSqlService;
 import com.clougence.clouddm.console.web.component.cicd.ImMessageType;
 import com.clougence.clouddm.console.web.component.cicd.ImSenderService;
-import com.clougence.clouddm.console.web.component.cicd.model.ChangeExecuteInfo;
 import com.clougence.clouddm.console.web.component.cicd.model.ChangeTicketInfo;
 import com.clougence.clouddm.console.web.component.cicd.model.ChangeTicketInfoResult;
 import com.clougence.clouddm.console.web.global.i18n.DmI18nUtils;
 import com.clougence.clouddm.console.web.global.i18n.I18nDmMsgKeys;
 import com.clougence.clouddm.console.web.global.i18n.I18nRdpMsgKeys;
-import com.clougence.clouddm.console.web.model.fo.cicd.ChangeExecLogFO;
-import com.clougence.clouddm.console.web.model.fo.cicd.ChangeExecTaskListFO;
 import com.clougence.clouddm.console.web.model.fo.cicd.ChangeListFO;
-import com.clougence.clouddm.console.web.model.fo.ticket.DmAutoExecConfigFO;
-import com.clougence.clouddm.console.web.model.vo.DmBizLogVO;
+import com.clougence.clouddm.console.web.model.vo.DmPageVO;
 import com.clougence.clouddm.console.web.model.vo.cicd.ChangeBodyItemVO;
-import com.clougence.clouddm.console.web.model.vo.cicd.ChangeBodyVO;
+import com.clougence.clouddm.console.web.model.vo.cicd.ChangeSqlPreviewVO;
+import com.clougence.clouddm.console.web.model.vo.cicd.ChangeTransferVO;
 import com.clougence.clouddm.console.web.model.vo.cicd.ChangeVO;
-import com.clougence.clouddm.console.web.model.vo.ticket.DmAutoExecJobVO;
-import com.clougence.clouddm.console.web.model.vo.ticket.DmAutoExecTaskVO;
-import com.clougence.clouddm.console.web.model.vo.ticket.DmPageVO;
+import com.clougence.clouddm.console.web.service.cicd.domain.ChangeTriggerContext;
 import com.clougence.clouddm.console.web.service.cicd.domain.CreateSuggest;
 import com.clougence.clouddm.console.web.service.cicd.domain.CreateSuggestType;
-import com.clougence.clouddm.console.web.service.cicd.domain.Item;
+import com.clougence.clouddm.console.web.service.upload.impl.SqlFilePreviewReader;
 import com.clougence.clouddm.console.web.util.DmConvertUtils;
-import com.clougence.clouddm.platform.dal.access.*;
-import com.clougence.clouddm.platform.dal.access.entry.UserCacheEntry;
+import com.clougence.clouddm.platform.dal.access.ApprovalDal;
+import com.clougence.clouddm.platform.dal.access.ChangeFlowDal;
+import com.clougence.clouddm.platform.dal.access.DataSourceDal;
+import com.clougence.clouddm.platform.dal.access.ObjectCacheDao;
 import com.clougence.clouddm.platform.dal.model.approval.DmApprovalDO;
 import com.clougence.clouddm.platform.dal.model.cicd.*;
 import com.clougence.clouddm.platform.dal.model.datasource.DmDsDO;
-import com.clougence.clouddm.platform.dal.model.execution.AutoExecJobStatus;
-import com.clougence.clouddm.platform.dal.model.execution.DmExecAutoJobDO;
-import com.clougence.clouddm.platform.dal.model.execution.DmExecAutoTaskDO;
-import com.clougence.clouddm.platform.dal.model.execution.SQLJobBizType;
 import com.clougence.clouddm.platform.dal.model.gitops.DmGitOpsScmDO;
-import com.clougence.clouddm.platform.dal.model.monitor.DmMonBizLogDO;
-import com.clougence.clouddm.platform.dal.model.monitor.LogDependBizType;
 import com.clougence.clouddm.platform.dal.util.PageUtils;
 import com.clougence.utils.CollectionUtils;
 import com.clougence.utils.JsonUtils;
 import com.clougence.utils.StringUtils;
-import com.clougence.utils.format.DateFormatType;
 import com.clougence.utils.format.WellKnowFormat;
 import com.clougence.utils.i18n.I18nUtils;
 
@@ -77,29 +73,30 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @Slf4j
 public class DmChangeServiceImpl implements DmChangeService {
+    private static final String  CHANGE_SOURCE_PREFIX = "/* sourceCode: ";
+    private static final String  CHANGE_SOURCE_SUFFIX = " */";
+
     @Resource
-    private ChangeFlowDal       changeFlowDal;
+    private ChangeFlowDal        changeFlowDal;
     @Resource
-    private MonitorDal          monitorDal;
+    private DataSourceDal        dsDal;
     @Resource
-    private ExecutionDal        executionDal;
+    private ApprovalDal          approvalDal;
     @Resource
-    private DataSourceDal       dsDal;
+    private ObjectCacheDao       objectCacheDao;
     @Resource
-    private ApprovalDal         approvalDal;
+    private DmScmService         dmScmService;
     @Resource
-    private ObjectCacheDao      objectCacheDao;
+    private ImSenderService      senderService;
     @Resource
-    private DmScmService        dmScmService;
+    private ApprovalFlowService  approvalFlowService;
     @Resource
-    private ImSenderService     senderService;
+    private ChangeSqlService     changeSqlService;
     @Resource
-    private AutoExecService     autoExecService;
-    @Resource
-    private ApprovalFlowService approvalFlowService;
+    private ChangeCascadeService changeCascadeService;
 
     @Override
-    public IPage<ChangeVO> queryChangeByFlowAndQuery(String ownerUid, long flowId, ChangeListFO fo) {
+    public DmPageVO<ChangeVO> queryChangeByFlowAndQuery(String ownerUid, long flowId, ChangeListFO fo) {
         Page<?> page = PageUtils.startPage(fo.getPage());
 
         // page
@@ -111,9 +108,10 @@ public class DmChangeServiceImpl implements DmChangeService {
 
         DmChangeFlowDO flowDO = this.changeFlowDal.flowMapper().queryByOwnerAndId(ownerUid, flowId);
         IPage<DmChangeDO> pageData = this.changeFlowDal.changeMapper().listChangeByConditionAndPage(page, queryParams);
+        DmPageVO<ChangeVO> results = new DmPageVO<>(pageData);
         List<DmChangeDO> records = pageData.getRecords();
         if (CollectionUtils.isEmpty(records)) {
-            return new Page<>();
+            return results;
         }
         Map<Long, DmChangeFlowDO> devopsMap;
         Map<Long, DmDsDO> dsMap;
@@ -132,9 +130,11 @@ public class DmChangeServiceImpl implements DmChangeService {
             dsList.forEach(d -> dsMap.put(d.getId(), d));
 
             scmMap = new HashMap<>();
-            Set<Long> scmIds = devops.stream().map(DmChangeFlowDO::getRefScmId).collect(Collectors.toSet());
-            List<DmGitOpsScmDO> scmList = dmScmService.queryScmByIds(ownerUid, scmIds);
-            scmList.forEach(d -> scmMap.put(d.getId(), d));
+            Set<Long> scmIds = devops.stream().map(DmChangeFlowDO::getRefScmId).filter(Objects::nonNull).collect(Collectors.toSet());
+            if (!CollectionUtils.isEmpty(scmIds)) {
+                List<DmGitOpsScmDO> scmList = dmScmService.queryScmByIds(ownerUid, scmIds);
+                scmList.forEach(d -> scmMap.put(d.getId(), d));
+            }
         } else {
             devopsMap = Collections.emptyMap();
             dsMap = Collections.emptyMap();
@@ -143,79 +143,199 @@ public class DmChangeServiceImpl implements DmChangeService {
 
         // convert
         List<ChangeVO> vos = records.stream().map(obj -> {
-            return DmConvertUtils.convertToChangeVO(flowDO, obj, devopsMap, dsMap, scmMap);
+            return DmConvertUtils.convertToChangeVO(flowDO, obj, devopsMap, dsMap, scmMap, objectCacheDao);
         }).collect(Collectors.toList());
 
-        IPage<ChangeVO> results = new Page<>();
+        Set<Long> batchIds = records.stream().map(DmChangeDO::getRefBatchId).filter(Objects::nonNull).collect(Collectors.toSet());
+        Map<Long, DmChangeBatchDO> batches = new HashMap<>();
+        if (!CollectionUtils.isEmpty(batchIds)) {
+            this.changeFlowDal.batchMapper().queryByIds(ownerUid, batchIds).forEach(batch -> batches.put(batch.getId(), batch));
+        }
+
+        Set<Long> parentChangeIds = records.stream().map(DmChangeDO::getRefParentChangeId).filter(Objects::nonNull).collect(Collectors.toSet());
+        Map<Long, DmChangeDO> parentChanges = new HashMap<>();
+        if (!CollectionUtils.isEmpty(parentChangeIds)) {
+            this.changeFlowDal.changeMapper().queryByIds(ownerUid, parentChangeIds).forEach(parentChange -> parentChanges.put(parentChange.getId(), parentChange));
+        }
+        Set<Long> parentFlowIds = parentChanges.values().stream().map(DmChangeDO::getRefFlowId).collect(Collectors.toSet());
+        Map<Long, DmChangeFlowDO> parentFlows = new HashMap<>();
+        if (!CollectionUtils.isEmpty(parentFlowIds)) {
+            this.changeFlowDal.flowMapper().queryByIds(ownerUid, parentFlowIds).forEach(parentFlow -> parentFlows.put(parentFlow.getId(), parentFlow));
+        }
+
+        Set<Long> cascadeChangeIds = records.stream().filter(change -> change.getRefBatchId() != null).map(DmChangeDO::getId).collect(Collectors.toSet());
+        Map<Long, List<ChangeTransferVO>> downstream = Collections.emptyMap();
+        if (!CollectionUtils.isEmpty(cascadeChangeIds)) {
+            downstream = this.changeCascadeService.queryDownstreamTransfers(ownerUid, cascadeChangeIds);
+        }
+
+        Set<Long> changeIds = records.stream().map(DmChangeDO::getId).collect(Collectors.toSet());
+        downstream.values().stream().flatMap(Collection::stream).map(ChangeTransferVO::getTargetChangeId).filter(Objects::nonNull).forEach(changeIds::add);
+        Map<Long, Long> ticketIds = this.queryTicketIds(ownerUid, changeIds);
+
+        for (int i = 0; i < records.size(); i++) {
+            DmChangeDO change = records.get(i);
+            ChangeVO vo = vos.get(i);
+            Long currentTicketId = ticketIds.get(change.getId());
+            List<ChangeTransferVO> transfers = downstream.getOrDefault(change.getId(), Collections.emptyList());
+            for (ChangeTransferVO transfer : transfers) {
+                Long targetTicketId = ticketIds.get(transfer.getTargetChangeId());
+                transfer.setTargetTicketId(targetTicketId);
+                if (targetTicketId != null) {
+                    currentTicketId = targetTicketId;
+                }
+            }
+            vo.setTicketId(currentTicketId);
+            if (change.getRefBatchId() != null) {
+                DmChangeBatchDO batch = batches.get(change.getRefBatchId());
+                if (batch != null) {
+                    vo.setRootChangeId(batch.getRefRootChangeId());
+                    vo.setBatchStatus(batch.getBatchStatus());
+                }
+            }
+            if (change.getRefParentChangeId() != null) {
+                DmChangeDO parentChange = parentChanges.get(change.getRefParentChangeId());
+                if (parentChange != null) {
+                    DmChangeFlowDO parentFlow = parentFlows.get(parentChange.getRefFlowId());
+                    vo.setParentFlowId(parentChange.getRefFlowId());
+                    if (parentFlow != null) {
+                        vo.setParentFlowName(parentFlow.getFlowName());
+                    }
+                }
+            }
+            vo.setDownstream(transfers);
+        }
+
         results.setRecords(vos);
-        results.setCurrent(pageData.getCurrent());
-        results.setSize(pageData.getSize());
-        results.setPages(pageData.getPages());
-        results.setTotal(pageData.getTotal());
         return results;
     }
 
     @Override
-    public DmChangeDO queryChangeById(String ownerUid, long changeId) {
-        return this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
+    public DmChangeDO queryChangeById(long changeId) {
+        return this.changeFlowDal.changeMapper().queryChangeById(changeId);
     }
 
     @Override
-    public ChangeBodyVO fetchChangeBodyByChangeId(String ownerUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-
-        // current content, map by name
-        List<DmChangeFlowItemDO> versionedList = this.changeFlowDal.flowItemMapper().queryItemByFlowId(change.getOwnerUid(), change.getRefFlowId());
-        List<DmChangeItemDO> changeList = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), change.getId(), ChangeItemType.SQL);
-
-        Map<String, DmChangeFlowItemDO> versionedByName = new HashMap<>();
-        Map<String, DmChangeItemDO> changeByName = new HashMap<>();
-        for (DmChangeFlowItemDO item : versionedList) {
-            versionedByName.put(item.getContentName(), item);
-        }
-        for (DmChangeItemDO item : changeList) {
-            changeByName.put(item.getContentName(), item);
+    public ChangeSqlPreviewVO previewChangeSql(long changeId, int startLine, int lineCount, String contentName) {
+        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(changeId);
+        if (change == null) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
         }
 
-        // all item names, keep order.
-        List<Item> allItem = new ArrayList<>();
-        versionedList.forEach(i -> allItem.add(new Item(i)));
-        changeList.forEach(i -> allItem.add(new Item(i)));
-        Set<String> itemNames = new LinkedHashSet<>();
-        itemNames.addAll(allItem.stream().sorted(Comparator.comparingInt(Item::getIndex)).map(Item::getName).collect(Collectors.toList()));
-
-        //
-        List<ChangeBodyItemVO> bodyItemList = itemNames.stream().map(name -> {
-            ChangeBodyItemVO vo = new ChangeBodyItemVO();
-            vo.setContentName(name);
-
-            if (versionedByName.containsKey(name)) {
-                vo.setOldBody(versionedByName.get(name).getContent());
+        if (StringUtils.isNotBlank(contentName)) {
+            DmChangeItemDO baselineSnapshot = this.changeFlowDal.changeItemMapper().queryChangeItemByName(change.getOwnerUid(), changeId, ChangeItemType.SQL_BASELINE, contentName);
+            DmChangeItemDO current = this.changeFlowDal.changeItemMapper().queryChangeItemByName(change.getOwnerUid(), changeId, ChangeItemType.SQL, contentName);
+            ChangeBodyItemVO item = new ChangeBodyItemVO();
+            item.setContentName(contentName);
+            item.setNewBody(current == null ? null : current.getContent());
+            if (baselineSnapshot != null) {
+                item.setOldBody(baselineSnapshot.getContent());
+            } else {
+                DmChangeFlowItemDO baseline = this.changeFlowDal.flowItemMapper().queryItemByFlowIdAndName(change.getOwnerUid(), change.getRefFlowId(), contentName);
+                item.setOldBody(baseline == null ? null : baseline.getContent());
+                if (Objects.equals(item.getOldBody(), item.getNewBody())) {
+                    String legacyDiff = this.changeSqlService.consumeSqlFile(changeId, file -> readChangeSource(file, contentName));
+                    if (StringUtils.isNotBlank(legacyDiff)) {
+                        item.setOldBody(null);
+                        item.setNewBody(legacyDiff);
+                    }
+                }
             }
-            if (changeByName.containsKey(name)) {
-                vo.setNewBody(changeByName.get(name).getContent());
+            ChangeSqlPreviewVO vo = new ChangeSqlPreviewVO();
+            vo.setItemList(Collections.singletonList(item));
+            return vo;
+        }
+
+        var preview = this.changeSqlService.consumeSqlFile(changeId, f -> SqlFilePreviewReader.read(f, startLine, lineCount));
+        ChangeSqlPreviewVO vo = new ChangeSqlPreviewVO();
+        vo.setStartLine(preview.startLine());
+        vo.setTotalLines(preview.totalLines());
+        vo.setContent(preview.content());
+        vo.setEof(preview.eof());
+        if (startLine == 1) {
+            List<DmChangeItemDO> diffItems = this.changeFlowDal.changeItemMapper().queryChangeItemMetaByChangeId(change.getOwnerUid(), changeId, ChangeItemType.SQL_BASELINE);
+            if (CollectionUtils.isEmpty(diffItems)) {
+                diffItems = this.changeFlowDal.queryChangedItemMeta(change.getOwnerUid(), change.getRefFlowId(), changeId);
             }
-
-            return StringUtils.equals(vo.getNewBody(), vo.getOldBody()) ? null : vo;
-        }).filter(Objects::nonNull).collect(Collectors.toList());
-
-        // find diff result
-        List<DmChangeItemDO> diffChange = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), change.getId(), ChangeItemType.REVIEW);
-        String sqlChange = diffChange.isEmpty() ? "" : diffChange.get(0).getContent();
-        ChangeBodyVO vo = new ChangeBodyVO();
-        vo.setChangeBody(sqlChange);
-        vo.setItemList(bodyItemList);
+            List<String> contentNames = diffItems.stream().map(DmChangeItemDO::getContentName).toList();
+            List<ChangeBodyItemVO> items;
+            if (CollectionUtils.isEmpty(contentNames)) {
+                items = this.changeSqlService.consumeSqlFile(changeId, file -> {
+                    List<ChangeBodyItemVO> legacyItems = new ArrayList<>();
+                    for (String name : readChangeSourceNames(file)) {
+                        ChangeBodyItemVO itemVO = new ChangeBodyItemVO();
+                        itemVO.setContentName(name);
+                        itemVO.setNewBody(readChangeSource(file, name));
+                        legacyItems.add(itemVO);
+                    }
+                    return legacyItems;
+                });
+            } else {
+                items = contentNames.stream().map(name -> {
+                    ChangeBodyItemVO itemVO = new ChangeBodyItemVO();
+                    itemVO.setContentName(name);
+                    return itemVO;
+                }).toList();
+            }
+            vo.setItemList(items);
+        }
         return vo;
     }
 
-    @Override
-    public List<DmChangeItemDO> fetchChangeCheckByChangeId(String ownerUid, long changeId) {
-        return this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(ownerUid, changeId, ChangeItemType.CHECKS);
+    private List<String> readChangeSourceNames(Path file) throws IOException {
+        Set<String> names = new LinkedHashSet<>();
+        try (BufferedReader reader = Files.newBufferedReader(file, StandardCharsets.UTF_8)) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                String name = parseChangeSourceName(line);
+                if (name != null) {
+                    names.add(name);
+                }
+            }
+        }
+        return new ArrayList<>(names);
+    }
+
+    private String readChangeSource(Path file, String contentName) throws IOException {
+        StringBuilder content = new StringBuilder();
+        boolean selected = false;
+        try (BufferedReader reader = Files.newBufferedReader(file, StandardCharsets.UTF_8)) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                String name = parseChangeSourceName(line);
+                if (name != null) {
+                    if (selected) {
+                        break;
+                    }
+                    selected = contentName.equals(name);
+                    continue;
+                }
+                if (selected) {
+                    if (!content.isEmpty()) {
+                        content.append('\n');
+                    }
+                    content.append(line);
+                }
+            }
+        }
+        return content.toString().trim();
+    }
+
+    private String parseChangeSourceName(String line) {
+        if (!line.startsWith(CHANGE_SOURCE_PREFIX) || !line.endsWith(CHANGE_SOURCE_SUFFIX)) {
+            return null;
+        }
+        return line.substring(CHANGE_SOURCE_PREFIX.length(), line.length() - CHANGE_SOURCE_SUFFIX.length()).trim();
     }
 
     @Override
-    public ChangeTicketInfoResult fetchChangeApprovalByChangeId(String ownerUid, long changeId) {
-        List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(ownerUid, changeId, ChangeItemType.TICKET);
+    public ChangeTicketInfoResult fetchChangeApprovalByChangeId(long changeId) {
+        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(changeId);
+        if (change == null) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
+        }
+
+        List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), changeId, ChangeItemType.TICKET);
         DmChangeItemDO item = list.isEmpty() ? null : list.get(0);
         if (item == null) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_STEP_NO_BODY_ERROR.name()));
@@ -240,179 +360,24 @@ public class DmChangeServiceImpl implements DmChangeService {
     }
 
     @Override
-    public ChangeExecuteInfo fetchChangeExecuteByChangeId(String ownerUid, long changeId) {
-        List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(ownerUid, changeId, ChangeItemType.EXECUTE);
-        DmChangeItemDO item = list.isEmpty() ? null : list.get(0);
-        if (item == null) {
-            return null;
+    public Map<Long, Long> queryTicketIds(String ownerUid, Collection<Long> changeIds) {
+        if (CollectionUtils.isEmpty(changeIds)) {
+            return Collections.emptyMap();
         }
-        return JsonUtils.toObj(item.getContent(), ChangeExecuteInfo.class);
-    }
-
-    @Override
-    public void skipCheck(String ownerUid, String userUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        if (change == null) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
-        }
-        if (change.getCurrentStep() != ChangeStep.CHECK) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NEED_CHECK_STEP_ERROR.name()));
-        }
-
-        String language = this.senderService.getFlowLanguage(change.getOwnerUid(), change.getRefFlowId());
-        Locale locale = I18nUtils.getLocale(language);
-
-        UserCacheEntry operatorUser = this.objectCacheDao.queryByUid(userUid);
-        String operatorMsg = String.format("[%s] %s", DmI18nUtils.getMessage(operatorUser.getRoleName()), operatorUser.getUserName());
-        String message = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_SKIP_CHECK_STEP_ERROR.name(), locale, change.getChangeName(), operatorMsg);
-        this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeLife, message);
-        this.changeFlowDal.changeMapper().updateStepTo(change.getId(), change.getVersion(), ChangeStep.APPROVAL, message);
-        this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion() + 1, ChangeStatus.READY, message);
-
-    }
-
-    @Transactional(rollbackFor = Throwable.class)
-    @Override
-    public void confirmExec(String ownerUid, String userUid, long changeId, DmAutoExecConfigFO fo) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        if (change == null) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
-        }
-        if (change.getCurrentStep() != ChangeStep.EXECUTE) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NEED_EXECUTE_STEP_ERROR.name()));
-        }
-        if (change.getCurrentStatus() != ChangeStatus.OPEN) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NEED_EXECUTE_OPEN_ERROR.name()));
-        }
-        DmChangeFlowDO flowDO = this.changeFlowDal.flowMapper().queryByOwnerAndId(ownerUid, change.getRefFlowId());
-        if (flowDO.getFlowExecute() != ChangeExecStrategy.Manual) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_EXECUTE_IS_NOT_MANUAL_ERROR.name()));
-        }
-
-        ChangeExecuteInfo config = new ChangeExecuteInfo();
-        config.setExecType(fo.getAutoExecType());
-        config.setTransactional(fo.isEnableTransactional());
-        config.setErrorStrategy(fo.getErrorStrategy());
-        config.setRetryWaitTime(fo.getRetryWaitTime());
-        config.setRetryCount(fo.getRetryCount());
-        config.setExecTime(fo.getExecTime());
-        config.setSnapshot(fo.isSnapshot());
-
-        DmChangeItemDO itemDO = new DmChangeItemDO();
-        itemDO.setOwnerUid(change.getOwnerUid());
-        itemDO.setRefFlowId(change.getRefFlowId());
-        itemDO.setRefChangeId(change.getId());
-        itemDO.setChangeItemType(ChangeItemType.EXECUTE);
-        itemDO.setContent(JsonUtils.toJson(config));
-        itemDO.setContentIndex(1);
-        itemDO.setContentName("exec");
-        this.changeFlowDal.changeItemMapper().deleteByChangeItemType(change.getOwnerUid(), change.getId(), ChangeItemType.EXECUTE);
-        this.changeFlowDal.changeItemMapper().insert(itemDO);
-        this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion(), ChangeStatus.READY, "");
-    }
-
-    private static void checkRunStatus(DmChangeDO change) {
-        if (change == null) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
-        }
-        if (change.getCurrentStep() != ChangeStep.EXECUTE && change.getCurrentStep() != ChangeStep.FINISH) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NEED_EXECUTE_STEP_ERROR.name()));
-        }
-    }
-
-    @Override
-    public DmAutoExecJobVO queryExecJobInfo(String ownerUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        return this.autoExecService.queryAutoExecJob(String.valueOf(change.getId()), SQLJobBizType.CHANGE, true);
-    }
-
-    @Override
-    public DmPageVO<DmAutoExecTaskVO> queryExecTaskList(String ownerUid, ChangeExecTaskListFO fo) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, fo.getChangeId());
-        checkRunStatus(change);
-
-        return this.autoExecService.queryAutoExecTaskList(String.valueOf(change.getId()), SQLJobBizType.CHANGE, true, fo.getTaskStatus(), fo.getPage());
-    }
-
-    @Override
-    public List<DmBizLogVO> queryExecLog(String ownerUid, ChangeExecLogFO fo) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, fo.getChangeId());
-        checkRunStatus(change);
-
-        DmExecAutoJobDO jobDO = checkJob(ownerUid, fo.getJobId());
-        List<DmMonBizLogDO> dmBizLogDOS;
-        if (fo.getBizType() == LogDependBizType.AUTO_EXEC_JOB) {
-            if (jobDO.getBizId() == null) {
-                return Collections.emptyList();
-            } else {
-                dmBizLogDOS = this.monitorDal.bizLogMapper().queryListByBizId(jobDO.getBizId());
-            }
-        } else {
-            if (fo.getTaskId() == null) {
-                return Collections.emptyList();
-            } else {
-                DmExecAutoTaskDO execTaskDO = executionDal.autoTaskMapper().selectById(fo.getTaskId());
-                dmBizLogDOS = this.monitorDal.bizLogMapper().queryListByBizId(execTaskDO.getBizId());
+        List<DmChangeItemDO> items = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeIds(ownerUid, changeIds, ChangeItemType.TICKET);
+        Map<Long, Long> ticketIds = new HashMap<>();
+        for (DmChangeItemDO item : items) {
+            ChangeTicketInfo ticketInfo = JsonUtils.toObj(item.getContent(), ChangeTicketInfo.class);
+            if (ticketInfo != null && ticketInfo.getTicketId() != null) {
+                ticketIds.put(item.getRefChangeId(), ticketInfo.getTicketId());
             }
         }
-
-        return dmBizLogDOS.stream().map((dmBizLogDO -> {
-            DmBizLogVO vo = new DmBizLogVO();
-            vo.setContent(dmBizLogDO.getContent());
-            vo.setId(dmBizLogDO.getId());
-            vo.setLogLevel(dmBizLogDO.getLogLevel());
-            vo.setDependOnBizType(dmBizLogDO.getDependOnBizType());
-            vo.setTime(DateFormatType.s_yyyyMMdd_HHmmss.format(dmBizLogDO.getGmtCreate()));
-            return vo;
-        })).collect(Collectors.toList());
+        return ticketIds;
     }
 
     @Override
-    public void pauseExecJob(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        this.autoExecService.stopJob(String.valueOf(changeId), SQLJobBizType.CHANGE, curUid);
-    }
-
-    @Override
-    public void startExecJob(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        this.autoExecService.retryJob(String.valueOf(changeId), SQLJobBizType.CHANGE, curUid);
-    }
-
-    @Override
-    public void retryExecJob(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        this.autoExecService.retryJob(String.valueOf(changeId), SQLJobBizType.CHANGE, curUid);
-    }
-
-    @Override
-    public void abortExecJob(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        this.autoExecService.endJob(String.valueOf(changeId), SQLJobBizType.CHANGE, curUid);
-    }
-
-    @Transactional(rollbackFor = Throwable.class)
-    @Override
-    public void skipExecTask(String ownerUid, String curUid, long changeId, long taskId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
-        checkRunStatus(change);
-
-        this.autoExecService.skipTask(String.valueOf(changeId), SQLJobBizType.CHANGE, taskId, curUid);
-    }
-
-    @Override
-    public void retryChange(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
+    public void retryChange(String curUid, long changeId) {
+        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(changeId);
         if (change == null || change.isLockStatus()) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
         }
@@ -424,14 +389,10 @@ public class DmChangeServiceImpl implements DmChangeService {
         Locale locale = I18nUtils.getLocale(language);
         switch (change.getCurrentStep()) {
             case INIT:
-            case CHECK:
-                this.retryChangeAtInitOrCheck(locale, change, false);
+                this.retryChangeAtInit(locale, change, false);
                 return;
             case APPROVAL:
-                this.retryChangeAtApproval(locale, change, ownerUid, curUid, false);
-                return;
-            case EXECUTE:
-                this.retryChangeAtExecute(locale, change, ownerUid, curUid);
+                this.retryChangeAtApproval(locale, change, curUid, false);
                 return;
             case FINISH:
             default:
@@ -440,29 +401,28 @@ public class DmChangeServiceImpl implements DmChangeService {
     }
 
     @Override
-    public void restartChange(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
+    public void restartChange(String curUid, long changeId) {
+        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(changeId);
         if (change == null || change.isLockStatus()) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
         }
         if (change.getCurrentStep() == ChangeStep.INIT && change.getCurrentStatus() == ChangeStatus.READY) {
             return;
         }
+        DmChangeFlowDO restartFlow = this.changeFlowDal.flowMapper().queryByOwnerAndId(change.getOwnerUid(), change.getRefFlowId());
+        if (restartFlow != null && restartFlow.getFlowType() == ChangeFlowType.BUILT_IN) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_UNSUPPORT_RETRY_MESSAGE.name()));
+        }
 
         String language = this.senderService.getFlowLanguage(change.getOwnerUid(), change.getRefFlowId());
         Locale locale = I18nUtils.getLocale(language);
         switch (change.getCurrentStep()) {
             case INIT:
-            case CHECK:
-                this.retryChangeAtInitOrCheck(locale, change, true);
+                this.retryChangeAtInit(locale, change, true);
                 this.changeFlowDal.changeItemMapper().deleteByChangeItemAll(change.getOwnerUid(), change.getId());
                 return;
             case APPROVAL:
-                this.retryChangeAtApproval(locale, change, ownerUid, curUid, true);
-                this.changeFlowDal.changeItemMapper().deleteByChangeItemAll(change.getOwnerUid(), change.getId());
-                return;
-            case EXECUTE:
-                this.restartChangeAtExecute(locale, change, ownerUid, curUid);
+                this.retryChangeAtApproval(locale, change, curUid, true);
                 this.changeFlowDal.changeItemMapper().deleteByChangeItemAll(change.getOwnerUid(), change.getId());
                 return;
             case FINISH:
@@ -471,7 +431,7 @@ public class DmChangeServiceImpl implements DmChangeService {
         }
     }
 
-    private void retryChangeAtInitOrCheck(Locale locale, DmChangeDO change, boolean isRestart) {
+    private void retryChangeAtInit(Locale locale, DmChangeDO change, boolean isRestart) {
         String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REINIT_OR_RECHECK_AT_CONSOLE_MESSAGE.name());
 
         if (isRestart) {
@@ -485,17 +445,17 @@ public class DmChangeServiceImpl implements DmChangeService {
         this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
     }
 
-    private void retryChangeAtApproval(Locale locale, DmChangeDO change, String ownerUid, String curUid, boolean isRestart) {
+    private void retryChangeAtApproval(Locale locale, DmChangeDO change, String curUid, boolean isRestart) {
         // close ticket
         if (change.getCurrentStatus() == ChangeStatus.WAIT) {
-            List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(ownerUid, change.getId(), ChangeItemType.TICKET);
+            List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), change.getId(), ChangeItemType.TICKET);
             DmChangeItemDO item = list.isEmpty() ? null : list.get(0);
             if (item != null) {
                 ChangeTicketInfo ticketInfo = JsonUtils.toObj(item.getContent(), ChangeTicketInfo.class);
                 if (ticketInfo != null) {
                     String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REAPPROVAL_AT_CONSOLE_NOTICE.name());
-                    this.approvalFlowService.closeTicket(ticketInfo.getTicketId(), msg1, ownerUid, curUid);
-                    change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, change.getId());
+                    this.approvalFlowService.closeTicket(ticketInfo.getTicketId(), msg1, change.getOwnerUid(), curUid);
+                    change = this.changeFlowDal.changeMapper().queryChangeById(change.getId());
                 }
             }
         }
@@ -521,51 +481,9 @@ public class DmChangeServiceImpl implements DmChangeService {
         }
     }
 
-    private void retryChangeAtExecute(Locale locale, DmChangeDO change, String ownerUid, String curUid) {
-        switch (change.getCurrentStatus()) {
-            case OPEN:
-            case READY:
-                return;
-            case WAIT:
-            case FINISH:
-            case CLOSED:
-                throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_UNSUPPORT_STATUS_MESSAGE.name()));
-            case FAILED:
-            default:
-                break;
-        }
-
-        String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REEXE_AT_CONSOLE_MESSAGE.name());
-        List<DmChangeItemDO> items = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), change.getId(), ChangeItemType.EXECUTE);
-        DmChangeItemDO item = CollectionUtils.isEmpty(items) ? null : items.get(0);
-
-        if (item == null || StringUtils.isEmpty(item.getContent())) {
-            int res = this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion(), ChangeStatus.READY, msg1);
-        } else {
-            this.autoExecService.retryJob(String.valueOf(change.getId()), SQLJobBizType.CHANGE, curUid);
-            int res = this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion(), ChangeStatus.WAIT, msg1);
-        }
-
-        String msg2 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REEXE_AT_CONSOLE_NOTICE.name(), locale, change.getChangeName());
-        this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
-    }
-
-    private void restartChangeAtExecute(Locale locale, DmChangeDO change, String ownerUid, String curUid) {
-        if (change.getCurrentStatus() == ChangeStatus.OPEN) {
-            String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REINIT_OR_RECHECK_AT_CONSOLE_MESSAGE.name());
-            int res1 = this.changeFlowDal.changeMapper().updateStepTo(change.getId(), change.getVersion(), ChangeStep.INIT, msg1);
-            int res2 = this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion() + 1, ChangeStatus.READY, msg1);
-
-            String msg2 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_REINIT_OR_RECHECK_AT_CONSOLE_NOTICE.name(), locale, change.getChangeName());
-            this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
-        } else {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_UNSUPPORT_STATUS_MESSAGE.name()));
-        }
-    }
-
     @Override
-    public void closeChange(String ownerUid, String curUid, long changeId) {
-        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(ownerUid, changeId);
+    public void closeChange(String curUid, long changeId) {
+        DmChangeDO change = this.changeFlowDal.changeMapper().queryChangeById(changeId);
         if (change == null) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_NOT_EXIST_ERROR.name()));
         }
@@ -575,17 +493,13 @@ public class DmChangeServiceImpl implements DmChangeService {
 
         switch (change.getCurrentStep()) {
             case INIT:
-            case CHECK:
-                this.closeChangeAtInitOrCheck(locale, change);
+                this.closeChangeAtInit(locale, change);
                 return;
             case APPROVAL:
-                this.closeChangeAtApproval(locale, change, ownerUid, curUid);
-                return;
-            case EXECUTE:
-                this.closeChangeAtExecute(locale, change, ownerUid, curUid);
+                this.closeChangeAtApproval(locale, change, curUid);
                 return;
             case INIT_SNAPSHOT:
-                this.closeChangeAtSnapshot(locale, change, ownerUid, curUid);
+                this.closeChangeAtSnapshot(locale, change);
                 return;
             case FINISH:
                 return;
@@ -594,7 +508,7 @@ public class DmChangeServiceImpl implements DmChangeService {
         }
     }
 
-    private void closeChangeAtInitOrCheck(Locale locale, DmChangeDO change) {
+    private void closeChangeAtInit(Locale locale, DmChangeDO change) {
         String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_CLOSE_AT_CONSOLE_MESSAGE.name());
         int res = this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion(), ChangeStatus.CLOSED, msg1);
 
@@ -602,19 +516,20 @@ public class DmChangeServiceImpl implements DmChangeService {
         this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
 
         this.changeFlowDal.changeMapper().lockChangeById(change.getId(), change.getVersion() + 1);
+        this.changeCascadeService.onChangeTerminal(change);
     }
 
-    private void closeChangeAtApproval(Locale locale, DmChangeDO change, String ownerUid, String curUid) {
+    private void closeChangeAtApproval(Locale locale, DmChangeDO change, String curUid) {
         // message
         String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_CLOSE_AT_CONSOLE_MESSAGE.name());
 
         // close ticket
-        List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(ownerUid, change.getId(), ChangeItemType.TICKET);
+        List<DmChangeItemDO> list = this.changeFlowDal.changeItemMapper().queryChangeItemByChangeId(change.getOwnerUid(), change.getId(), ChangeItemType.TICKET);
         DmChangeItemDO item = list.isEmpty() ? null : list.get(0);
         if (item != null) {
             ChangeTicketInfo ticketInfo = JsonUtils.toObj(item.getContent(), ChangeTicketInfo.class);
             if (ticketInfo != null && !this.approvalFlowService.isFinish(ticketInfo.getTicketId())) {
-                this.approvalFlowService.closeTicket(ticketInfo.getTicketId(), msg1, ownerUid, curUid);
+                this.approvalFlowService.closeTicket(ticketInfo.getTicketId(), msg1, change.getOwnerUid(), curUid);
             }
         }
 
@@ -625,32 +540,10 @@ public class DmChangeServiceImpl implements DmChangeService {
         this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
 
         this.changeFlowDal.changeMapper().lockChangeById(change.getId(), change.getVersion() + 1);
+        this.changeCascadeService.onChangeTerminal(change);
     }
 
-    private void closeChangeAtExecute(Locale locale, DmChangeDO change, String ownerUid, String curUid) {
-        // message
-        String msg1 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_CLOSE_AT_CONSOLE_MESSAGE.name());
-
-        // close auto exec
-        DmAutoExecJobVO jobVO = this.autoExecService.queryAutoExecJob(String.valueOf(change.getId()), SQLJobBizType.CHANGE, true);
-        if (jobVO != null) {
-            if (jobVO.getStatus() == AutoExecJobStatus.FINISH || jobVO.getStatus() == AutoExecJobStatus.TERMINATION) {
-                // is end status
-            } else {
-                throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_EXECUTE_NOT_FINISH.name()));
-            }
-        }
-
-        // send message and update status
-        int res = this.changeFlowDal.changeMapper().updateStatusTo(change.getId(), change.getVersion(), ChangeStatus.CLOSED, msg1);
-
-        String msg2 = DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_CLOSE_AT_CONSOLE_NOTICE.name(), locale, change.getChangeName());
-        this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
-
-        this.changeFlowDal.changeMapper().lockChangeById(change.getId(), change.getVersion() + 1);
-    }
-
-    private void closeChangeAtSnapshot(Locale locale, DmChangeDO change, String ownerUid, String curUid) {
+    private void closeChangeAtSnapshot(Locale locale, DmChangeDO change) {
         if (change.getCurrentStatus() == ChangeStatus.FINISH || change.getCurrentStatus() == ChangeStatus.CLOSED) {
             return;
         }
@@ -665,17 +558,7 @@ public class DmChangeServiceImpl implements DmChangeService {
         this.senderService.sendMessage(change.getOwnerUid(), change.getRefFlowId(), ImMessageType.ChangeNotice, msg2);
 
         this.changeFlowDal.changeMapper().lockChangeById(change.getId(), change.getVersion() + 1);
-    }
-
-    private DmExecAutoJobDO checkJob(String ownerUid, long jobId) {
-        DmExecAutoJobDO jobDO = this.executionDal.autoJobMapper().selectById(jobId);
-        if (jobDO == null) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.AUTO_EXEC_JOB_NOT_EXISTS_ERROR_MESSAGE.name()));
-        }
-        if (!jobDO.getPrimaryUid().equals(ownerUid)) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.AUTO_EXEC_JOB_NOT_BELONG_CURRENT_TEAM.name()));
-        }
-        return jobDO;
+        this.changeCascadeService.onChangeTerminal(change);
     }
 
     @Override
@@ -684,8 +567,12 @@ public class DmChangeServiceImpl implements DmChangeService {
         if (flowDO == null || flowDO.isDeleted()) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_NOT_EXIST_ERROR.name()));
         }
+        ChangeFlowType flowType = flowDO.getFlowType() == null ? ChangeFlowType.SCM : flowDO.getFlowType();
+        if (flowType == ChangeFlowType.BUILT_IN) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_BUILT_IN_TRIGGER_ERROR.name()));
+        }
         if (flowDO.getChangeFlowStatus() != ChangeFlowStatus.NORMAL) {
-            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_FLOW_IS_ARCHIVE_OR_DELETE_ERROR.name()));
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_IS_ARCHIVE_OR_DELETE_ERROR.name()));
         }
         if (!flowDO.isEnable()) {
             throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.DEVOPS_IS_DISABLED_ERROR.name()));
@@ -706,6 +593,12 @@ public class DmChangeServiceImpl implements DmChangeService {
         List<DmChangeDO> changeList = this.changeFlowDal.changeMapper().queryUnlockedChange(ownerUid, flowDO.getId());
         if (CollectionUtils.isNotEmpty(changeList)) {
             for (DmChangeDO changeDO : changeList) {
+                if (!StringUtils.equals(commitId, changeDO.getLastCommitId())) {
+                    CreateSuggest suggest = new CreateSuggest();
+                    suggest.setChange(changeDO);
+                    suggest.setSuggestType(CreateSuggestType.Later);
+                    return suggest;
+                }
                 switch (changeDO.getCurrentStep()) {
                     case INIT_SNAPSHOT: {
                         CreateSuggest suggest = new CreateSuggest();
@@ -714,25 +607,11 @@ public class DmChangeServiceImpl implements DmChangeService {
                         return suggest;
                     }
                     case INIT:
-                    case CHECK:
                     case APPROVAL: {
                         CreateSuggest suggest = new CreateSuggest();
                         suggest.setChange(changeDO);
                         suggest.setSuggestType(CreateSuggestType.Restart);
                         return suggest;
-                    }
-                    case EXECUTE: {
-                        if (changeDO.getCurrentStatus() == ChangeStatus.OPEN) {
-                            CreateSuggest suggest = new CreateSuggest();
-                            suggest.setChange(changeDO);
-                            suggest.setSuggestType(CreateSuggestType.Restart);
-                            return suggest;
-                        } else {
-                            CreateSuggest suggest = new CreateSuggest();
-                            suggest.setChange(changeDO);
-                            suggest.setSuggestType(CreateSuggestType.Later);
-                            return suggest;
-                        }
                     }
                     case FINISH: {
                         CreateSuggest suggest = new CreateSuggest();
@@ -750,21 +629,121 @@ public class DmChangeServiceImpl implements DmChangeService {
     }
 
     @Override
-    public ResWebData<String> triggerChangeSuggest(String ownerUid, long flowId, String commitId) {
-        DmChangeFlowDO flowDO = this.changeFlowDal.flowMapper().queryByOwnerAndId(ownerUid, flowId);
+    @Transactional(rollbackFor = Throwable.class, propagation = Propagation.REQUIRED)
+    public void triggerBuiltInChange(String ownerUid, String triggerUid, long flowId, String sql) {
+        if (StringUtils.isBlank(sql)) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_MANUAL_SQL_REQUIRED_ERROR.name()));
+        }
+        DmChangeFlowDO flow = this.changeFlowDal.flowMapper().queryByOwnerAndIdForUpdate(ownerUid, flowId);
+        if (flow == null || flow.isDeleted()) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_NOT_EXIST_ERROR.name()));
+        }
+        if (flow.getFlowType() != ChangeFlowType.BUILT_IN || flow.getRefParentFlowId() != null) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_BUILT_IN_TRIGGER_ERROR.name()));
+        }
+        if (flow.getChangeFlowStatus() != ChangeFlowStatus.NORMAL) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_IS_ARCHIVE_OR_DELETE_ERROR.name()));
+        }
+        if (!flow.isEnable()) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.DEVOPS_IS_DISABLED_ERROR.name()));
+        }
+        if (this.changeFlowDal.batchMapper().queryRunningByRootFlow(ownerUid, flowId) != null) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_CASCADE_RUNNING_ERROR.name()));
+        }
+        int unfinished = this.changeFlowDal.changeMapper().countUnfinishedChangeByFlowId(ownerUid, flowId);
+        if (unfinished > 0) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.DEVOPS_CHANGE_IN_INUSE_ERROR.name(), unfinished));
+        }
 
+        DmChangeDO change = new DmChangeDO();
+        change.setOwnerUid(ownerUid);
+        change.setTriggerUid(triggerUid);
+        change.setRefFlowId(flowId);
+        change.setChangeName(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_INIT_MANUAL_NAME.name(), WellKnowFormat.WKF_DATE_TIME24.now()));
+        change.setChangeBranch("");
+        change.setChangeTime(new Date());
+        change.setCurrentStep(ChangeStep.APPROVAL);
+        change.setCurrentStatus(ChangeStatus.READY);
+        change.setVersion(0);
+        change.setTryTimes(0);
+        change.setLastCommitId("manual-" + UUID.randomUUID());
+        change.setLockStatus(false);
+        this.changeFlowDal.changeMapper().insert(change);
+
+        DmChangeItemDO sqlItem = new DmChangeItemDO();
+        sqlItem.setOwnerUid(ownerUid);
+        sqlItem.setRefFlowId(flowId);
+        sqlItem.setRefChangeId(change.getId());
+        sqlItem.setChangeItemType(ChangeItemType.SQL);
+        sqlItem.setContentName("manual.sql");
+        sqlItem.setContentIndex(0);
+        sqlItem.setContent(sql);
+        this.changeFlowDal.changeItemMapper().insert(sqlItem);
+
+        DmChangeItemDO reviewItem = new DmChangeItemDO();
+        reviewItem.setOwnerUid(ownerUid);
+        reviewItem.setRefFlowId(flowId);
+        reviewItem.setRefChangeId(change.getId());
+        reviewItem.setChangeItemType(ChangeItemType.REVIEW);
+        reviewItem.setContentName("manual.sql");
+        reviewItem.setContentIndex(0);
+        reviewItem.setContent(sql);
+        this.changeFlowDal.changeItemMapper().insert(reviewItem);
+
+        this.changeCascadeService.createRootBatch(change);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Throwable.class, propagation = Propagation.REQUIRED)
+    public ResWebData<String> triggerChangeSuggest(String ownerUid, long flowId, ChangeTriggerContext triggerContext) {
+        if (triggerContext == null || StringUtils.isBlank(triggerContext.getCommitId())) {
+            throw new ErrorMessageException("change trigger commit is missing.");
+        }
+        DmChangeFlowDO flowDO = this.changeFlowDal.flowMapper().queryByOwnerAndIdForUpdate(ownerUid, flowId);
+        if (flowDO == null || flowDO.isDeleted()) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_NOT_EXIST_ERROR.name()));
+        }
+        ChangeFlowType flowType = flowDO.getFlowType() == null ? ChangeFlowType.SCM : flowDO.getFlowType();
+        if (flowType == ChangeFlowType.BUILT_IN) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_BUILT_IN_TRIGGER_ERROR.name()));
+        }
+        if (flowDO.getChangeFlowStatus() != ChangeFlowStatus.NORMAL) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_IS_ARCHIVE_OR_DELETE_ERROR.name()));
+        }
+        if (!flowDO.isEnable()) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.DEVOPS_IS_DISABLED_ERROR.name()));
+        }
+        boolean hasChildren = this.changeFlowDal.flowMapper().countChildren(ownerUid, flowId) > 0;
+        if (hasChildren && !triggerContext.isManual()) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_CASCADE_MANUAL_ONLY_ERROR.name()));
+        }
+        if (hasChildren && this.changeFlowDal.batchMapper().queryRunningByRootFlow(ownerUid, flowId) != null) {
+            throw new ErrorMessageException(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_FLOW_CASCADE_RUNNING_ERROR.name()));
+        }
+
+        DmChangeTriggerReceiptDO receipt = new DmChangeTriggerReceiptDO();
+        receipt.setOwnerUid(ownerUid);
+        receipt.setRefFlowId(flowId);
+        receipt.setProvider(flowDO.getRefScmType());
+        receipt.setDeliveryId(triggerContext.getDeliveryId());
+        receipt.setCommitId(triggerContext.getCommitId());
+        receipt.setTriggerType(triggerContext.getTriggerType());
+        if (this.changeFlowDal.triggerReceiptMapper().reserve(receipt) == 0) {
+            return ResWebDataUtils.buildSuccess("duplicate change trigger ignored.");
+        }
         // create
         try {
-            CreateSuggest suggest = this.createChangeSuggest(ownerUid, flowId, commitId);
+            CreateSuggest suggest = this.createChangeSuggest(ownerUid, flowId, triggerContext.getCommitId());
             switch (suggest.getSuggestType()) {
                 case Create:
-                    doCreateChange(ownerUid, flowDO, commitId);
+                    DmChangeDO change = doCreateChange(ownerUid, flowDO, triggerContext.getCommitId(), triggerContext.getTriggerUid());
+                    this.changeCascadeService.createRootBatch(change);
                     return ResWebDataUtils.buildSuccess("change created.");
                 case Restart:
-                    doRestartChange(suggest);
+                    doRestartChange(suggest, triggerContext.getTriggerUid());
                     return ResWebDataUtils.buildSuccess("change restarted.");
                 case Later:
-                    doLaterChange(ownerUid, flowDO, commitId, suggest);
+                    doLaterChange(ownerUid, flowDO, triggerContext.getCommitId(), triggerContext.getTriggerUid(), suggest);
                     return ResWebDataUtils.buildError("change later.");
                 default: {
                     return ResWebDataUtils.buildError("InnerError: Unknown SuggestType.");
@@ -772,13 +751,14 @@ public class DmChangeServiceImpl implements DmChangeService {
             }
         } catch (Exception e) {
             log.error(e.getMessage(), e);
-            throw new ErrorMessageException(e.getMessage());
+            throw new ErrorMessageException(e);
         }
     }
 
-    private void doCreateChange(String owner, DmChangeFlowDO gitOpsFlowDO, String commitId) {
+    private DmChangeDO doCreateChange(String owner, DmChangeFlowDO gitOpsFlowDO, String commitId, String triggerUid) {
         DmChangeDO changeDO = new DmChangeDO();
         changeDO.setOwnerUid(owner);
+        changeDO.setTriggerUid(triggerUid);
         changeDO.setRefFlowId(gitOpsFlowDO.getId());
         changeDO.setChangeName(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_INIT_REPO_NAME.name(), WellKnowFormat.WKF_DATE_TIME24.now()));
         changeDO.setChangeBranch(gitOpsFlowDO.getScmRepoBranch());
@@ -789,12 +769,16 @@ public class DmChangeServiceImpl implements DmChangeService {
         changeDO.setTryTimes(0);
         changeDO.setLastCommitId(commitId);
         changeDO.setLockStatus(false);
-        changeDO.setFlowWalked(new RsChangeFlowWalkedObj());
         this.changeFlowDal.changeMapper().insert(changeDO);
+        return changeDO;
     }
 
-    private void doRestartChange(CreateSuggest suggest) {
+    private void doRestartChange(CreateSuggest suggest, String triggerUid) {
         DmChangeDO changeDO = suggest.getChange();
+        if (triggerUid != null) {
+            changeDO.setTriggerUid(triggerUid);
+            this.changeFlowDal.changeMapper().updateTriggerUid(changeDO.getId(), triggerUid);
+        }
 
         // language
         String language = this.senderService.getFlowLanguage(changeDO.getOwnerUid(), changeDO.getRefFlowId());
@@ -806,12 +790,13 @@ public class DmChangeServiceImpl implements DmChangeService {
             log.error(e.getMessage(), e);
         }
 
-        this.restartChange(changeDO.getOwnerUid(), changeDO.getOwnerUid(), changeDO.getId());
+        this.restartChange(changeDO.getOwnerUid(), changeDO.getId());
     }
 
-    private void doLaterChange(String owner, DmChangeFlowDO gitOpsFlowDO, String commitId, CreateSuggest suggest) {
+    private void doLaterChange(String owner, DmChangeFlowDO gitOpsFlowDO, String commitId, String triggerUid, CreateSuggest suggest) {
         DmChangeDO changeDO = new DmChangeDO();
         changeDO.setOwnerUid(owner);
+        changeDO.setTriggerUid(triggerUid);
         changeDO.setRefFlowId(gitOpsFlowDO.getRefFlowId());
         changeDO.setRefFlowId(gitOpsFlowDO.getId());
         changeDO.setChangeName(DmI18nUtils.getMessage(I18nDmMsgKeys.CICD_CHANGE_INIT_REPO_NAME.name(), WellKnowFormat.WKF_DATE_TIME24.now()));
@@ -824,7 +809,6 @@ public class DmChangeServiceImpl implements DmChangeService {
         changeDO.setTryTimes(0);
         changeDO.setLastCommitId(commitId);
         changeDO.setLockStatus(true);
-        changeDO.setFlowWalked(new RsChangeFlowWalkedObj());
         this.changeFlowDal.changeMapper().insert(changeDO);
     }
 }
