@@ -15,7 +15,6 @@
  */
 package com.clougence.clouddm.ds.dameng.execute;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.clougence.clouddm.base.metadata.ds.DataSourceConfig;
@@ -34,7 +33,7 @@ import lombok.extern.slf4j.Slf4j;
 public class DmSupportSpi implements RdbSupportSpi {
 
     //    private final List<RdbIsolation> isolationDef = Arrays.asList(RdbIsolation.values());
-    private final List<RdbIsolation> isolationDef = Arrays.asList(RdbIsolation.DEFAULT);
+    private final List<RdbIsolation> isolationDef = List.of(RdbIsolation.DEFAULT);
 
     @Override
     public RdbSupportLevel supportChangeCatalog(DataSourceConfig dsConfig) {
@@ -84,10 +83,5 @@ public class DmSupportSpi implements RdbSupportSpi {
     @Override
     public List<RdbIsolation> supportIsolation() {
         return this.isolationDef;
-    }
-
-    @Override
-    public boolean supportMultiStatement(boolean isDesktop) {
-        return isDesktop;
     }
 }
